Added CSS styles

--- a/suchana-ui/src/index.html
+++ b/suchana-ui/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SuchanaUi</title>
+  <title>Suchana</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,3 +12,11 @@
   <app-root></app-root>
 </body>
 </html>
+<!-- Footer -->
+
+<footer class="page-footer font-small">
+  <div class="footer-copyright text-center py-3">© 2018 Copyright:
+    <a href="#"> suchana</a>
+  </div>
+
+</footer>
